--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,7 +49,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -59,7 +59,7 @@
 
 .description {
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .code {
@@ -87,7 +87,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #d6d3d3;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
